[gd_scene load_steps=13 format=2]

[ext_resource path="res://entities/ball/sprites/ball_sprite.png" type="Texture" id=1]
[ext_resource path="res://entities/ball/ball.gd" type="Script" id=2]
[ext_resource path="res://entities/ball/ball_audio.gd" type="Script" id=3]
[ext_resource path="res://entities/ball/audio/ball_hit.mp3" type="AudioStream" id=4]
[ext_resource path="res://entities/ball/audio/bounce_medium.mp3" type="AudioStream" id=5]
[ext_resource path="res://entities/ball/audio/bounce_small.mp3" type="AudioStream" id=6]
[ext_resource path="res://entities/ball/ball_trail.gd" type="Script" id=7]
[ext_resource path="res://entities/spawner/spawner.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/ball/ball_particles.gd" type="Script" id=9]
[ext_resource path="res://particles/ball_hit_particles/ball_hit_particles.tscn" type="PackedScene" id=10]
[ext_resource path="res://particles/ball_bounce_particles/ball_bounce_particles.tscn" type="PackedScene" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="Ball" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="SmearLine" type="Line2D" parent="."]
width = 8.0
default_color = Color( 1, 1, 1, 1 )
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource( 7 )

[node name="SoundEffects" type="Node" parent="."]
script = ExtResource( 3 )

[node name="SoundBounceSmall" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 6 )
volume_db = 5.0

[node name="SoundBounceMedium" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 5 )
pitch_scale = 1.5

[node name="SoundHit" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 4 )

[node name="Particles" type="Node2D" parent="."]
script = ExtResource( 9 )
bounce_particles = ExtResource( 11 )
hit_particles = ExtResource( 10 )

[node name="Spawner" parent="Particles" instance=ExtResource( 8 )]

[connection signal="bounced" from="." to="SoundEffects" method="_on_ball_bounced"]
[connection signal="bounced" from="." to="Particles" method="_on_ball_bounced"]
[connection signal="hit" from="." to="SoundEffects" method="_on_ball_hit"]
[connection signal="hit" from="." to="Particles" method="_on_ball_hit"]
[connection signal="moving" from="." to="SmearLine" method="_on_ball_moving"]
